# storefront

./: .env.example  .gitignore  .gitleaks.toml  BOOTSTRAP.md  LICENSE  Makefile  README.md  conftest.py  flags.json  justfile  pyproject.toml  run.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  pip-audit.yml  secrets-scan.yml
app/: __init__.py  downloads.py  flags.py  main.py  metrics.py  observability.py  store.py
app/templates/: index.html  legal.html
scripts/: apply_ladder.py  bootstrap.sh  build_deliverables_manifest.py  mint_revenue_ladder.py  security-scan.sh  verify_storefront.py
static/landing-assets/: analytics.js
tests/: conftest.py  test_observability.py  test_storefront.py
