[project]
name = "storefront"
version = "0.1.0"
description = "Public-facing product catalog & lead capture microservice"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "prometheus-client>=0.20",
    "stripe>=5.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx2>=2.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
[tool.ruff]
line-length = 120
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "SIM"]
ignore = [
    "E402",  # late imports are intentional (lazy module loading inside handlers)
    "B008",  # FastAPI Depends() in default args is the documented pattern
    "C401",  # comprehensions-in-call are fine for readability here
    "C408",  # dict/list literals are clear
]
[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E501"]  # long HTML/f-string templates are unavoidable in a single-file web app
[tool.ruff.lint.isort]
known-first-party = ["app"]
[tool.black]
line-length = 120
